fix: whitespace in primary ctas

--- a/css/elements.scss
+++ b/css/elements.scss
@@ -24,6 +24,8 @@ button, .tw-btn-rounded .button, .tw-btn-rounded .faux-button, .tw-btn-rounded .
 
 .iz-cta-primary .wp-block-button__link {
 	white-space: nowrap;
+	padding-left: 0;
+	padding-right: 0;
 }
 
 // # Alerts
